# traffic-intelligence-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/migrations/: env.py
backend/scripts/: bootstrap_admin.py  create_admin.py  validate_red_light_violation.py  validate_traffic_light_state.py  yolo_smoke_test.py
backend/tests/: test_artifact_storage.py  test_baseline_pipeline.py  test_camera_scene.py  test_collection_endpoints.py  test_cors.py  test_detection_types.py  test_end_of_video_lifecycle.py  test_health.py  test_helmet_detector.py  test_helmet_rider_association.py  test_lane_occupancy.py  test_lane_violation_annotation.py  test_lane_violation_artifacts.py  test_lane_violation_detector.py  test_lane_violation_persistence.py  test_media_ranges.py  test_multi_object_tracker.py  test_no_helmet_detector.py  test_pipeline_finalization.py  test_preview_transcoding.py  test_red_light_annotation.py  test_red_light_artifacts.py  test_red_light_detector.py  test_red_light_persistence.py  test_rider_motorcycle_association.py  test_route_authorization.py  test_scene_annotation.py  test_scene_geometry.py  test_security.py  test_temporal_rider_association.py  test_tracking_geometry.py  test_traffic_artifacts.py  test_traffic_light_annotation.py  test_traffic_light_artifacts.py  test_traffic_light_state.py  test_traffic_light_temporal.py  test_triple_riding_detector.py  test_violation_detector_flush.py  test_violation_event_lifecycle.py  test_worker_scene_configuration.py  (+5 more)
(+159 files in other folders)
