[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "opencv-python-headless>=5.0.0.93",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "scipy>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "ultralytics>=8.4.101",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
